refactor: re-organize stats endpoint
